--- a/drivetome-manager-page/src/index.html
+++ b/drivetome-manager-page/src/index.html
@@ -2,10 +2,10 @@
 <html lang="he" dir='rtl'>
 <head>
   <meta charset="utf-8">
-  <title>drivetomeManagerPage</title>
+  <title>DriveToMe</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/glilotobus.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
 </head>
